...
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationItem.setHidesBackButton(true, animated: false)
        title = "movie_list_screen_title".localized
        navigationItem.accessibilityLabel = "Message on top"
    }
    
    func setUpBindings() {
        viewModel.moviesObservable.observe(on: self) { [weak self] movies in
            guard let self = self else { return }
            if movies.isEmpty {
...
